# umya-spreadsheet-excel

./: .gitignore  Cargo.toml  README.md  build.bat  build.rs  develop.md  package-lock.json  package.json
docs/: License.md  config.md  help.md  main.md  menu_bar.md  names_box.md  search-menu-design.md  search.md  viewer.md  列筛选.md  搜索弹窗UI布局.md  警示消息.md
docs/excel/: comments.md  fill.md  formula.md  mod.md  reader.md  writer.md
docs/gui/: viewer.md
docs/gui/widgets/: License.md  alert_notify.md  alert_popup.md  config.md  convert_popup.md  license.md  menu_bar.md  names_box.md  search.md  table.md
docs/util/: backup.md  date.md  mod.md  open.md
examples/: test_bgcolor.rs
keygen/: Cargo.toml
keygen/src/: main.rs
scripts/: gen-icon.js
src/: main.rs  shortcut.rs
src/excel/: fill.rs  formula.rs  mod.rs  reader.rs  writer.rs
src/gui/: alignment.rs  fonts.rs  mod.rs  state.rs  viewer.rs
src/gui/widgets/: alert_notify.rs  alert_popup.rs  cond_format_popup.rs  config.rs  convert_popup.rs  dialogs.rs  empty_state.rs  help_popup.rs  license_popup.rs  menu_bar.rs  mod.rs  names_box.rs  search.rs  sheet_selector.rs  table.rs
src/license/: crypto.rs  fingerprint.rs  mod.rs  payload.rs  store.rs  time.rs
src/util/: backup.rs  date.rs  mod.rs  open.rs
tests/: scroll_compensation_test.rs
