[package]
name = "umya-spreadsheet-excel"
version = "0.1.0"
edition = "2021"
build = "build.rs"  # 指定构建脚本

[[bin]]
name = "my-excel"    # 你想要的可执行文件名
path = "src/main.rs" # 入口文件路径

[build-dependencies]
winresource = "0.1" # 使用 winresource

[dependencies]
umya-spreadsheet = "3.0"
eframe = "0.34.3"
egui = "0.34.3"
rfd = "0.17.2"
serde_yaml = "0.9"
dirs = "6"

# —— 离线授权 ——
ed25519-dalek = { version = "2", default-features = false }   # 授权码验签
sha2 = "0.10"                                                  # 指纹/摘要
hmac = "0.12"                                                  # 试用状态校验
base64 = "0.22"                                               # 授权码/指纹编码
aes-gcm = "0.10"                                              # --license 加密导出（AEAD）
getrandom = "0.2"                                              # 生成 AES-GCM 随机 nonce
image = { version = "0.25", default-features = false, features = ["png", "ico"] }  # 解码付款二维码 PNG + 窗口图标 ICO
winreg = "0.52"                                               # Windows 注册表（机器指纹 + 冗余存储）

# release 构建配置：strip 去符号（主要防逆向手段）。
# 注意：lto=true + codegen-units=1 会导致 wgpu/naga 依赖栈在 Windows 上
# 触发 STATUS_STACK_BUFFER_OVERRUN 编译崩溃，故不启用。
[profile.release]
strip = true

# 单独降低 `windows` crate（eframe/wgpu 的间接依赖）的优化级别，
# 规避 opt-level=3 下 rustc/LLVM 触发的 STATUS_STACK_BUFFER_OVERRUN 编译崩溃。
[profile.release.package.windows]
opt-level = 1

