[package]
name = "umya-spreadsheet-excel"
version = "0.1.3"
edition = "2021"
build = "build.rs"  # 指定构建脚本

[[bin]]
name = "my-excel"    # 你想要的可执行文件名
path = "src/main.rs" # 入口文件路径

[build-dependencies]
winresource = "0.1" # 使用 winresource

[dependencies]
umya-spreadsheet = "3.0"
eframe = "0.34.3"
egui = "0.34.3"
rfd = "0.17.2"
serde_yaml = "0.9"
dirs = "6"
env_logger = "0.11.8"   # 运行时日志（log 门面的实现；debug 构建经控制台子系统输出到终端）
log = "0.4"             # 日志门面（log::info!/warn! 等宏）

# —— 离线授权 ——
ed25519-dalek = { version = "2", default-features = false }   # 授权码验签
sha2 = "0.10"                                                  # 指纹/摘要
hmac = "0.12"                                                  # 试用状态校验
base64 = "0.22"                                               # 授权码/指纹编码
aes-gcm = "0.10"                                              # --license 加密导出（AEAD）
getrandom = "0.2"                                              # 生成 AES-GCM 随机 nonce
image = { version = "0.25", default-features = false, features = ["png", "ico"] }  # 解码付款二维码 PNG + 窗口图标 ICO
winreg = "0.52"                                               # Windows 注册表（机器指纹 + 冗余存储）

# —— 诊断 CLI 特性门控（diagnostic feature，默认关闭）——
# `--uuid` / `--stores` / `--license` 三个诊断子命令（连同 console_print / format_store_paths）
# 受此 feature 门控。它们会暴露本机存储路径 / UUID / 授权状态明文，逆向者 `strings` 一下即可
# 看到 "--stores" 等字面量并借此一次性枚举全部存储点（削弱 docs/gui/widgets/license.md §6.1 的分散混淆）。
# 公开发布版（build.bat → `cargo build --release`）默认不含此 feature；内部 / 技术支持诊断构建启用：
#     cargo build --release --features diagnostic      # 带诊断命令的版本
# 详见 docs/main.md §6。
[features]
diagnostic = []

# release 构建配置：strip 去符号（主要防逆向手段）。
# 注意：lto=true + codegen-units=1 会导致 wgpu/naga 依赖栈在 Windows 上
# 触发 STATUS_STACK_BUFFER_OVERRUN 编译崩溃，故不启用。
[profile.release]
strip = true

# 单独降低 `windows` crate（eframe/wgpu 的间接依赖）的优化级别，
# 规避 opt-level=3 下 rustc/LLVM 触发的 STATUS_STACK_BUFFER_OVERRUN 编译崩溃。
[profile.release.package.windows]
opt-level = 1

